--- a/public/form.html
+++ b/public/form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/form.css" />
+    <link rel="stylesheet" href="css/form.css" />
   </head>
   <body>
     <!--main header-->
@@ -17,10 +17,10 @@
     
    <nav id="nvgtn">
       <!--created a navigaivagion bar using list functions and links to other pages-->
-      <a class="nvgtntext" href="/channels">About</a>
-      <a class="nvgtntext" href="/faq">Activities</a>
-      <a class="nvgtntext" href="/contact_us">Contact</a>
-      <a class="nvgtntext" href="/form">Registration</a>
+      <a class="nvgtntext" href="index.html">About</a>
+      <a class="nvgtntext" href="Activites.html">Activities</a>
+      <a class="nvgtntext" href="Modules.html">Modules</a>
+      <a class="nvgtntext" href="form.html">Registration</a>
     </nav>
 
     <hr>
