--- a/public/form.html
+++ b/public/form.html
@@ -9,13 +9,16 @@
   </head>
   <body>
     <!--main header-->
+    <header id="main_heading">
+    <img
+    src="../images/Logo-solent.svg.png"
+    alt="Solent University Logo"
+    height="50"
+    />
+      <h1>Welcome to Solent University</h1> 
+    </header>
 
-    <h1 id="main_heading">
-      Southampton Solent <br />
-      University
-    </h1>
-    
-   <nav id="nvgtn">
+    <nav id="nvgtn">
       <!--created a navigaivagion bar using list functions and links to other pages-->
       <a class="nvgtntext" href="index.html">About</a>
       <a class="nvgtntext" href="Activites.html">Activities</a>
@@ -26,8 +29,10 @@
     <hr>
 
     <h2>Registration Form</h2>
+
+    <br>
     <!-- Form start-->
-    <form id="contactForm" action="#" method="post">
+    <form id="contactForm" action=# method="post">
       <!--First name-->
       <label for="name">Name:</label><br />
       <input type="text" id="name" name="name" required /><br />
@@ -60,7 +65,10 @@
         id="confirm_password"
         name="confirm_password"
         required
-      />
+      /> <br  />
+
+      <label for="comment">Comment:</label><br>
+        <textarea id="comment" name="comment" rows="4" cols="50"></textarea><br>
 <br>
 <br>
       <!-- Submit button-->
@@ -77,7 +85,7 @@
       <!--div 1-->
       <div class="box1">
         <p>Contact</p>
-         <p>You are visitor number: <span id="visitor-count">0</span></p>
+         <p>Visitor count: <span id="visitor-count">Loading...</span></p>
         <p><a href="5perek11@solent.ac.uk">5perek11@solent.ac.uk</a></p>
 
         <!-- VISITOR COUNT WOULD GO HERE-->
@@ -108,5 +116,6 @@
         
       </footer>   
       <script src="scripts/form.js"></script>
+      <script src="scripts/footer.js"></script>
   </body>
 </html>
