--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Southampton Solent University</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <!--main header-->
     <header id="main_heading">
+
+    <!--Logo image for header-->
     <img
     src="../images/Logo-solent.svg.png"
     alt="Solent University Logo"
@@ -28,7 +30,8 @@
 
     <hr>
 
-        <section>
+    <!--creates a section for three divs at the top of the page that contains three images-->
+      <section>
       <div class="box">
         <img src="../images/profile1.jpg" alt="Image 1" height="150" />
         <h2>Activity 1</h2>
@@ -53,6 +56,7 @@
       </div>
     </section>
 
+    <!--the second section of the body contains two divs one for text and the other for an image-->
     <section>
       <div class="left-text">
         <h2>About Solent University</h2>
@@ -72,16 +76,16 @@
     <hr>
     <!--footer created for in a div-->
 <footer>
-        <!-- three divs for layout-->
+        <!-- three divs for layout of footer-->
   <div class="page_footer">
 
       <!--div 1-->
       <div class="box1">
         <p>Contact</p>
+        <!-- VISITOR COUNT WOULD GO HERE-->
         <p>Visitor count: <span id="visitor-count">Loading...</span></p>
         <p><a href="5perek11@solent.ac.uk">5perek11@solent.ac.uk</a></p>
 
-        <!-- VISITOR COUNT WOULD GO HERE-->
       </div>
 
       <!--div2-->
@@ -107,8 +111,10 @@
         <a href="#" class="fa fa-google"></a>
       </div>
         
-      </footer>
+</footer>
     </div>
+
+    <!--javascript connection-->
     <script src="scripts/footer.js"></script>
   </body>
       
